--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dH6-eK-phN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RKt-j2-rVJ">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -186,11 +186,29 @@
                         <viewLayoutGuide key="safeArea" id="80V-hK-EAB"/>
                         <color key="backgroundColor" name="YP Black"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="V9l-gh-aKs"/>
+                    <navigationItem key="navigationItem" id="O5N-4Q-hZe"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Zf-y1-aNw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131" y="624"/>
+            <point key="canvasLocation" x="1982" y="681"/>
+        </scene>
+        <!--Splash View Controller-->
+        <scene sceneID="LNa-WJ-8fD">
+            <objects>
+                <viewController id="RKt-j2-rVJ" customClass="SplashViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SPw-5i-EbW">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ZLt-Wa-gD6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <segue destination="dH6-eK-phN" kind="show" identifier="ShowAuthScreen" id="cTu-TE-N7q"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ugx-Dr-HOX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-785" y="-187"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="iIY-RF-qBm">
@@ -207,30 +225,30 @@
                     </tabBar>
                     <connections>
                         <segue destination="Qs9-3J-gXD" kind="relationship" relationship="viewControllers" id="PKx-ds-KOA"/>
-                        <segue destination="uY4-Uf-f9m" kind="relationship" relationship="viewControllers" id="XYs-wI-03m"/>
+                        <segue destination="w8E-g4-WaE" kind="relationship" relationship="viewControllers" id="XYs-wI-03m"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc9-2u-ifW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1184" y="346"/>
+            <point key="canvasLocation" x="39" y="294"/>
         </scene>
         <!--Auth View Controller-->
         <scene sceneID="FH2-b0-vai">
             <objects>
                 <viewController id="AQO-fV-oni" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rG0-Sv-vgn">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_of_Unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="yaI-ye-aJ3">
-                                <rect key="frame" x="166.66666666666666" y="430.66666666666669" width="60" height="60"/>
+                                <rect key="frame" x="166.66666666666666" y="419" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="cra-yB-upD"/>
                                     <constraint firstAttribute="height" constant="60" id="fYC-f0-AVs"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8bB-Or-3eq" userLabel="Log In button">
-                                <rect key="frame" x="16" y="680" width="361" height="48"/>
+                                <rect key="frame" x="16" y="704" width="361" height="48"/>
                                 <color key="backgroundColor" name="YP White"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="TOq-9g-8Tz"/>
@@ -248,7 +266,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="4NJ-qk-mCp" kind="show" identifier="ShowWebView" id="8mw-Rx-Ef2"/>
+                                    <segue destination="4NJ-qk-mCp" kind="show" identifier="showWebView" id="8mw-Rx-Ef2"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -269,18 +287,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ImH-EX-Jgy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1144" y="-660"/>
+            <point key="canvasLocation" x="1114" y="-732"/>
         </scene>
         <!--Web View View Controller-->
         <scene sceneID="Nfn-ah-yES">
             <objects>
                 <viewController id="4NJ-qk-mCp" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1qY-cS-kHJ">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VZT-fM-TnS">
-                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
+                                <rect key="frame" x="0.0" y="56" width="393" height="786"/>
                                 <color key="backgroundColor" name="YP White"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -288,7 +306,7 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6k3-Y1-5Ln">
-                                <rect key="frame" x="0.0" y="103" width="393" height="4"/>
+                                <rect key="frame" x="0.0" y="56" width="393" height="4"/>
                                 <color key="progressTintColor" name="YP Black"/>
                             </progressView>
                         </subviews>
@@ -312,7 +330,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B8v-Jn-8JG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-277" y="-660"/>
+            <point key="canvasLocation" x="1981" y="-732"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BSl-Hi-fp6">
@@ -342,8 +360,9 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dH6-eK-phN" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="NL9-Z3-jPj"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gm7-7V-zFc">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -353,7 +372,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uTB-Ps-Dbl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2019" y="-660"/>
+            <point key="canvasLocation" x="179" y="-732"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zz4-Jg-dLp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w8E-g4-WaE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="V9l-gh-aKs"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CpF-BO-1bc">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uY4-Uf-f9m" kind="relationship" relationship="rootViewController" id="g7E-Te-6JC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RdR-Ix-yUr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1056" y="681"/>
         </scene>
     </scenes>
     <color key="tintColor" name="YP Black"/>
